updated all the default handlers to use the 'data' option

--- a/resources/handlers/array_inclusion.js.mustache
+++ b/resources/handlers/array_inclusion.js.mustache
@@ -1,5 +1,5 @@
 var actual = {{{actual}}};
-var elements = [{{{match.1}}}];
+var elements = [{{{elements}}}];
 for (var i = 0, len = elements.length; i < len; ++i) {
   expect(actual).toContain(elements[i]);
 }
