--- a/resources/handlers/array_proximity.js.mustache
+++ b/resources/handlers/array_proximity.js.mustache
@@ -1,2 +1,3 @@
 var actual = {{{actual}}};
-expect(actual.sort()).toEqual([{{{match.1}}}].sort());
+expect(actual.sort()).toEqual([{{{elements}}}].sort(),
+  'Expected {{{actualEscaped}}} to comprise the elements {{{expectedEscaped}}}.');
