--- a/resources/handlers/instanceof.js.mustache
+++ b/resources/handlers/instanceof.js.mustache
@@ -1,4 +1,4 @@
 var actual = {{{actual}}};
-if (!(actual instanceof {{{match.1}}})) {
-  throw 'Expected {{{actualEscaped}}} to be an instance of {{{match.1}}}.';
+if (!(actual instanceof {{{type}}})) {
+  throw 'Expected {{{actualEscaped}}} to be an instance of {{{type}}}.';
 }
