--- a/resources/handlers/array_head.js.mustache
+++ b/resources/handlers/array_head.js.mustache
@@ -1,4 +1,5 @@
 var actual = {{{actual}}};
-var head   = [{{{match.1}}}];
+var head   = [{{{head}}}];
 
-expect(actual.slice(0, head.length)).toEqual(head);
+expect(actual.slice(0, head.length)).toEqual(head,
+  'Expected {{{actualEscaped}}} to start with {{{head}}}.');
