--- a/resources/handlers/object_proximity.js.mustache
+++ b/resources/handlers/object_proximity.js.mustache
@@ -1,5 +1,5 @@
 var actual = {{{actual}}};
-var expected = { {{{match.1}}} };
+var expected = { {{{properties}}} };
 
 for (var key in expected) {
   expect(actual[key]).toEqual(expected[key]);
