the ol' catfish at work

--- a/resources/_examples.js.mustache
+++ b/resources/_examples.js.mustache
@@ -18,7 +18,7 @@ describe('{{shortName}}', function() {
       {{^exampleSource}}
       var result   = {{{actual}}};
       var expected = {{{expected}}};
-      assertEquality(expected, result);
+      expect(result).toEqual(expected);
       {{/exampleSource}}
       {{/hasCustomHandler}}
     });
