offer escaped version of matched data properties

--- a/resources/handlers/array_head.js.mustache
+++ b/resources/handlers/array_head.js.mustache
@@ -2,4 +2,4 @@ var actual = {{{actual}}};
 var head   = [{{{head}}}];
 
 expect(actual.slice(0, head.length)).toEqual(head,
-  'Expected {{{actualEscaped}}} to start with {{{head}}}.');
+  'Expected {{{actualEscaped}}} to start with {{{headEscaped}}}.');
