--- a/resources/handlers/array_tail.js.mustache
+++ b/resources/handlers/array_tail.js.mustache
@@ -2,4 +2,4 @@ var actual = {{{actual}}};
 var tail   = [{{{tail}}}];
 
 expect(actual.slice(actual.length - tail.length)).toEqual(tail,
-  'Expected {{{actualEscaped}}} to end with {{{tail}}}.');
+  'Expected {{{actualEscaped}}} to end with {{{tailEscaped}}}.');
