I think that's a little less weird

--- a/resources/run_tests.js.mustache
+++ b/resources/run_tests.js.mustache
@@ -6,10 +6,11 @@
 {{> global}}
 
 var fs       = require('fs'),
-    source   = fs.readFileSync('{{{location}}}', 'utf8'),{{/variable}}
+    source   = fs.readFileSync('{{{location}}}', 'utf8'),
     lines    = source.split('\n'),
     jasmine  = require('jasmine-node'),
     env      = jasmine.getEnv();
+{{/variable}}
 
 function print(string) {
   process.stderr.write(string);
